--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>welcome to my website</h1>
     <p>Are you ready??</p>
-    <h2><i yes ></i></h2>
+    <h2>yes </h2>
 </body>
 </html>
